historia da valsinha e notas de socio

--- a/resources/notas/textos/2.md
+++ b/resources/notas/textos/2.md
@@ -1,9 +1,9 @@
-# 1. A valsinha
+## A valsinha
 
 Antes, quando criança, ouvi a primeira valsinha. Deitado na cama observava o som que já não era. Quando criança, ouvi a valsinha. Agora, não mais.
-Deitado no sofá já arrastado, com as luzes apagadas graças a queda de uma árvore,  lembrei disso. "Mas de onde veio essa valsinha?", me perguntava enquanto "n" carros de bombeiro talvez se aproximavam. Os bombeiros do passado tocavam a valsinha, a sirene dissonante era melodiosa. A sirene do passado era minha infância, muito além do som, a sirene me levou para escola, cantou para eu dormir, raclamou das notas e eu, quietinho, ouvia.
+Deitado no sofá já arrastado, com as luzes apagadas graças a queda de uma árvore,  lembrei disso. "Mas de onde veio essa valsinha?", me perguntava enquanto carros de bombeiro talvez se aproximavam. Os bombeiros do passado tocam a valsinha, a sirene dissonante era melodiosa. A sirene do passado era minha infância, muito além do som, a sirene me levou para escola, cantou para eu dormir, raclamou das notas e eu, quietinho, ouvia.
 
-Quatro da manhã a mulher veio me bater a porta com meia duzia de papéis em baixo do braço e uma cara tão ranzinza que já ao abrir me deu vontade de fechar. O chá me segurou. 
+Oito da manhã a mulher veio me bater a porta com meia duzia de papéis em baixo do braço e uma cara tão ranzinza que já ao abrir me deu vontade de fechar. O chá me segurou.  
 
 "Tudo isso?", perguntei com o chá na frente da boca.
 
@@ -17,21 +17,51 @@ Não podia julgar a pressa, havia pechinchado o momento o suficiente para que el
 
 "Espera ...", sentia uma pontada de ânimo mas ... "não".
 
-E lá se iam duzentos compassos de três por quatro, tempo de valsa, é claro. Mas nenhuma aquela cobiçada. 
+E lá se iam duzentos compassos de três por quatro, tempo de valsa, é claro. Mas nenhuma aquela cobiçada.  
 Me despedi no fim das contas com uma coisa de vergonha pelo tempo gasto meu e dela. Convenci-me, à medida que comia o resto de lanche que sobrara do almoço, que a melodia era nada.
 
-## 1.1. Sirenes e Bombeiros
+### Sirenes e Bombeiros
 
-Não saberia bem diferenciar bombeiros e sirenes,  
-de olhos fechados,   
-são todos iguais.
+*Não saberia bem diferenciar bombeiros e sirenes.  
+de olhos fechados,  
+são todos iguais.*
 
-## 1.2. Valsinhas 
+## Queimourá
 
-Três é um número excelente para fazer dançar.
+Às seis da manhã dois homens estavam parados à beira da rua encarando algo queimado e eu, um pouco pertubado, tinha minhas alucinações musicais. Qualquer um acharia os dois suspeitos naquela situação, incluindo eu. Nenhum deles morava ali, nenhum deles estava vestido de forma casual e um segurava um coquetel molotov. Contudo, observando-se pela óptica da probabilidade, quais a chances de dois homens assim provocarem um atentado?  Nenhuma.  
 
-# 2. Um coquetel molotov para viagem    
+Porque, no fim das contas, que tom absurdista tinha dois caras em frente algo já queimado com o coquetel molotov nas mãos. Uma premonição do crime já cometido? A qualquer momento, eu temia, as linhas do tempo começariam a convergir e teríamos na nossa frente uma casa inteira e um coquetel a dois milimetros de se quebrar. Então, tudo começaria a rebobinar até retornar a esse momento.
 
-Às seis da manhã dois homens estavam parados à beira da rua encarando algo queimado e eu, um pouco pertubado, tinha minhas alucinações musicais. Qualquer um acharia os dois suspeitos naquela situação, incluindo eu. Nenhum deles morava ali, nenhum deles estava vestido de forma casual e um segurava um coquetel molotov. Contudo, observando-se pela óptica da probabilidade, quais a chances de dois homens assim provocarem um atentado?  Nenhuma.   
+Com o café no copo, e o pó lacrado, rememorei o tempo e ressenti o princípio da pertubação. Minha mãe, minha bicicleta e a valsa. Que valsa?  
+<br>
+<br>
+<br>
+"A mãe cantava ela?", ponderou olhando ao redor, " pode descrever melhor? Estilo, melodia, qualquer coisa assim?"  
+Assenti. Neguei. Respectivamente. Ele pegou um café.  
+O cabelo dele crescia um pouco além do ponto; parecia um pouco mais velho pelo desleixo. Peguei o café com a mão esquerda espelhando o movimento.  
+"Nada me vem em mente, desculpa."  
+"Mas... acho que conheço alguém que pode ajudar."  
+Ele puxou o celular do bolso e colocou em cima da mesa me apontando a foto de uma mulher sentada ao piano.  
+"Lembra?"  
+"Não."  
+Me lembrava, mas geraria uma conversa muito longa, e eu estava com pressa.  
+"Ela era da B no quinto. Laura alguma coisa. Ela deve entender dessas valsas."
+<br>
+<br>  
+<br>
+Oito da manhã a Laura veio me bater a porta com meia duzia de papéis em baixo do braço e uma cara tão ranzinza que já ao abrir me deu vontade de fechar. O chá me segurou.  
 
+"Tudo isso?", perguntei com o chá na frente da boca.
 
+"É."
+
+Não podia julgar a leve rispidez monosilábica. Um pouco de ressentimento e desconforto, associado a dificuldades financeiras rondava o ar. Então, ela entrou com os papéis e tocou pelo menos uns 30 segundos de cada.
+
+"Não"
+
+"Não"
+
+"Espera ...", sentia uma pontada de ânimo mas ... "não".
+
+E lá se iam duzentos compassos de três por quatro, tempo de valsa, é claro. Mas nenhuma aquela cobiçada.  
+Me despedi no fim das contas com uma coisa de vergonha pelo tempo gasto meu e dela. Convenci-me, à medida que comia o resto de comida que sobrara da janta, que a melodia era nada.
